# immeta

./: .gitignore  .travis.yml  Cargo.toml  Readme.md  index.html  search-index.js
analyzer/: Cargo.toml
analyzer/src/: main.rs
immeta/: LoadableMetadata.t.html  enum.Error.html  enum.GenericMetadata.html  fn.load.html  fn.load_from_buf.html  fn.load_from_file.html  index.html  sidebar-items.js  struct.Dimensions.html  trait.LoadableMetadata.html  type.Result.html
immeta/common/: index.html  sidebar-items.js
immeta/common/riff/: ChunkId.t.html  RiffChunk.t.html  RiffListChunk.t.html  RiffReader.t.html  index.html  sidebar-items.js  struct.ChunkId.html  struct.RiffChunk.html  struct.RiffListChunk.html  struct.RiffReader.html
immeta/formats/: index.html  sidebar-items.js
immeta/generic/: GenericMetadata.t.html  enum.GenericMetadata.html  fn.load.html  fn.load_from_buf.html  fn.load_from_file.html  load_from_buf.v.html  load_from_file.v.html
immeta/markers/: Jpeg.t.html  enum.Gif.html  enum.Jpeg.html  enum.Png.html  enum.Webp.html  index.html  sidebar-items.js  trait.MetadataMarker.html
immeta/traits/: trait.LoadableMetadata.html
immeta/types/: enum.Error.html  struct.Dimensions.html  type.Result.html
implementors/immeta/: trait.LoadableMetadata.js
src/: generic.rs  jpeg.rs  lib.rs  macros.rs  traits.rs  types.rs  utils.rs
src/common/: mod.rs  riff.rs  tiff.rs
src/formats/: gif.rs  jpeg.rs  mod.rs  png.rs  webp.rs
src/immeta/: generic.rs.html  lib.rs.html  macros.rs.html  traits.rs.html  types.rs.html  utils.rs.html
tests/: test.rs
(+92 files in other folders)
