[package]
name = "immeta"
version = "0.2.3"
authors = ["Vladimir Matveev <vladimir.matweev@gmail.com>"]
description = "An image metadata parsing library"
license = "MIT"
repository = "https://github.com/netvl/immeta"
documentation = "http://netvl.github.io/immeta/"
readme = "Readme.md"
keywords = ["image", "metadata"]

[dependencies]
byteorder = "0.4"
num = { version = "0.1", default-features = false }  # we don't need bigint and others here
