[package]
name = "immeta"
version = "0.3.2"
authors = ["Vladimir Matveev <vladimir.matweev@gmail.com>"]
description = "An image metadata parsing library"
license = "MIT"
repository = "https://github.com/netvl/immeta"
documentation = "http://netvl.github.io/immeta/"
readme = "Readme.md"
keywords = ["image", "metadata"]

[dependencies]
byteorder = "0.5"
num-traits = "0.1.32"
arrayvec = "0.3"
